<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">易寻</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_share">@string/share</string>
    <string name="action_collection">收藏</string>
    <string name="share_title">分享</string>
    <string name="share_to_system">系统分享</string>
    <string name="share_to_weibo">分享到微博</string>
    <string name="share_to_wechat">分享到微信</string>
    <string name="please_install_wechat">请安装微信</string>
    <string name="please_install_weibo">请安装微博</string>
    <string name="nothing">暂无</string>
    <string name="distance01km">距离我 %.1fm</string>
    <string name="errordate">错误的日期</string>
    <string name="pressagain_exit">再按一次退出易寻</string>

    <!--image pick begin-->
    <string name="photo">照片</string>
    <string name="take_photo">拍摄照片</string>
    <string name="preview_format">预览(%d)</string>
    <string name="pick_image_max_pick_warning_with_number">最多只能选择%d张</string>
    <string name="pick_image_finish_with_number" formatted="false">完成(%d/%d)</string>
    <string name="pick_image_action_menu_finish">完成菜单</string>


    <string name="cancel">取消</string>
    <string name="select">选择</string>
    <string name="complete">完成</string>
    <string name="confirm_select">确定选择</string>
    <string name="cancel_select">取消选择</string>
    <string name="all_image_folders">所有图片</string>
    <!--image pick end-->


    <!--登陆注册找回-->

    <string name="login_common_login">登录</string>
    <string name="login_common_pwd">密码</string>
    <string name="login_common_mobile">请输入手机号</string>
    <string name="login_common_nickname">昵称</string>
    <string name="common_input_validatecode">输入验证码</string>
    <string name="common_get_validatecode">获取验证码</string>
    <string name="login_common_register_next">免费注册></string>
    <string name="login_common_forget_next">重置密码></string>
    <string name="login_common_forget">重置密码</string>

    <string name="common_protocol">协议条款</string>
    <string name="common_regist">注册</string>
    <string name="common_nextstep">下一步</string>
    <string name="common_newpass">请输入新密码</string>
    <string name="common_save">保存</string>
    <string name="login_succes">登录成功</string>
    <string name="login_fial">登录失败，请稍后重试</string>
    <string name="lost_detail_left_txt">寻人信息</string>
    <string name="pass_login">跳过</string>
    <string name="help_detail_left_txt">线索信息</string>
    <string name="now_go">立即参与</string>
    <string name="login_mobile_hint">请输入11位手机号码</string>
    <string name="login_pwd_too_long">密码不能超过20个字符</string>
    <string name="login_pwd_too_short">密码不能低于6个字符</string>
    <string name="login_username_empty">用户名称不能为空</string>

    <string name="login_reset_pwd_success">密码修改成功，请重新登录</string>

    <!--test for ImageUtils begin-->
    <string name="show_glide_sdcard_size">显示 Glide 磁盘缓存</string>
    <string name="prefetch">预获取</string>
    <string name="clear_disk_cache">清除磁盘缓存</string>
    <string name="set_round_img">设置圆角网络图片</string>
    <string name="set_circle_img">设置圆形网络图片</string>
    <string name="set_res_round_img">设置圆角资源图片</string>
    <string name="set_res_circle_img">设置圆形资源图片</string>
    <string name="set_sdcard_round_img">设置圆角 sdcard 图片</string>
    <string name="set_sdcard_circle_img">设置圆形 sdcard 图片</string>
    <string name="imageutils_test">ImageUtils 测试</string>
    <string name="image_pick_test">图片选择器测试</string>
    <!--test for ImageUtils end-->

    <string name="action_post">发布</string>
    <string name="action_edit">编辑</string>
    <string name="action_save">保存</string>
    <string name="are_you_sure_finish">已对信息进行修改，尚未保存，是否退出？</string>
    <string name="personal_notmodify">暂未对信息进行修改</string>
    <string name="title_description">添加描述</string>
    <string name="title_personal_info">个人信息</string>
    <string name="please_inputName">请输入走失者姓名</string>
    <string name="please_inputTall">请输入走失者身高</string>
    <string name="please_inputPhone">请输入联系电话</string>
    <string name="get_userdetail_fail">用户信息获取失败</string>
    <string name="name">姓名：</string>
    <string name="hintmust">必填</string>
    <string name="sex">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="tall">身高：</string>
    <string name="hint_must_cm">必填，单位cm</string>
    <string name="birthday">出生日期：</string>
    <string name="hint_birthday">请选择出生日期</string>
    <string name="lostdate">走失日期：</string>
    <string name="hint_lostDate">请选择走失日期</string>
    <string name="lostlocation">走失地点：</string>
    <string name="hint_pleasechoose">点击选择</string>
    <string name="phone">联系电话：</string>
    <string name="characteristic">面部及肢体特征：</string>
    <string name="hint_characteristic">例如：双眼皮、鼻翼左边有痣、左上臂有伤疤等</string>
    <string name="clothescharacteristic">衣着特征：</string>
    <string name="hint_clothescharacteristic">例如：身穿黄色上衣，有三只小熊图案等</string>
    <string name="voicecharacteristic">口音及精神特征：</string>
    <string name="hint_voiceCharacteristic">例如：带有四川口音，患有精神疾病等</string>
    <string name="thanksMoney">酬金：</string>
    <string name="hint_thanksMoney">选填，单位元，如100</string>
    <string name="thanksmoney_desc">为了更好的推动他人帮您寻找走失家属,您可以酌情给予一定的酬谢</string>
    <string name="publish">发布</string>
    <string name="publish_success">发布成功</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="tip_uploading">正在上传，请稍候..</string>
    <string name="tip_pleaseinputage">请输入年龄阶段</string>
    <string name="tip_pleaseinputage2">年龄段开始数必须小于结束数</string>
    <string name="tip_pleaseinputlocation">请选择走失地点</string>
    <string name="validate_error_height">请输入正确身高</string>
    <string name="tip_pleaseinput_lostbirth">请选择走失者出生日期</string>
    <string name="validate_error_phone">手机号格式错误</string>
    <string name="validate_error_pwd">请输入6-20位数字或字母密码</string>
    <string name="error_locationfailed">定位失败</string>
    <string name="desc">个人简介</string>
    <string name="please_input_desc">请输入个人简介</string>
    <string name="contact">联系方式</string>
    <string name="please_input_contact">请输入联系方式</string>
    <string name="nickname">用户昵称</string>
    <string name="please_input_nickname">请输入用户昵称</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="search">搜索</string>
    <string name="select_location">地点选择</string>
    <string name="searchConfirm">请搜索关键字后选择地点标记</string>
    <string name="noresult">没有结果</string>
    <string name="noPerson">没有这个人</string>
    <string name="searching">正在搜索:%s</string>
    <string name="confirm">确认</string>
    <string name="title_my_lostlist">我的发布</string>
    <string name="title_other_lostlist">他的发布</string>
    <string name="title_friend">好友</string>
    <string name="title_mycollection">我收藏的</string>
    <string name="friend">@string/title_friend</string>
    <string name="hisLostList">他发布的寻人信息</string>
    <string name="choose_operation">请选择操作方式</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功"</string>
    <string name="delete_fail">删除失败"</string>
    <string name="add_success">添加成功</string>
    <string name="add_fail">添加失败</string>
    <string name="loading">加载中...</string>
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="commentNum">评论(%d)</string>
    <string name="ageNum">%s岁</string>
    <string name="loadfail">加载失败,请稍后再试</string>
    <string name="cant_share_nopic">请分享带图片消息</string>

    <!--走失详情-->
    <string name="lost_detail_attr"><xliff:g>%1$s</xliff:g><xliff:g>%2$5d</xliff:g>岁</string>
    <string name="replyto">回复<xliff:g>%1$4s</xliff:g>:</string>
    <string name="comment_num">评论（<xliff:g>%1$d</xliff:g>）条</string>

    <!---error start-->
    <string name="neterror">网络错误</string>
    <string name="unknown_error">未知错误</string>
    <string name="jsonparseerror">JSON解析错误</string>

    <!--error end-->

    <string name="tab_lost_list">走失信息</string>
    <string name="tab_settings">设置</string>
    <string name="tab_me">我</string>


    <!-- search -->
    <string name="search_title">寻人信息</string>
    <string name="gender">性别</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="age">年龄</string>
    <string name="age_edit_hint_min">最小年龄</string>
    <string name="age_edit_hint_max">最大年龄</string>
    <string name="lost_time">走失时间</string>
    <string name="lost_time_edit_hint">单击选择日期</string>
    <string name="lost_place">走失地点</string>
    <string name="lost_place_edit_hint">单击选择地点</string>
    <string name="screening">筛选</string>


    <string name="settings_personal_data">个人资料</string>
    <string name="settings_user_pass">账号密码</string>
    <string name="settings_about_us">关于我们</string>
    <string name="settings_make_fake_push">模拟推送</string>
    <string name="settings_login">登录</string>
    <string name="settings_exit">退出</string>
    <string name="logout_confirm">确定要退出吗？</string>
    <string name="cache_clear">清理缓存</string>
    <string name="cache_clear_confirm">确定要清除所有的缓存吗？</string>
    <string name="cache_clear_done">清除完毕</string>
    <string name="my_publish">我发布的</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_friends">我的好友</string>
    <string name="dealingImage">正在处理图片...</string>
    <string name="publishing">正在发布...</string>
    <string name="no_mobile_phone_num">未存在手机号码</string>
    <string name="mobile_phone_num">手机号</string>
    <string name="title_user_pass">帐号密码</string>
    <string name="about_us">关于我们</string>

    <string name="ptr_pull_refresh">下拉刷新</string>
    <string name="ptr_pull_refreshing">正在刷新</string>
    <string name="ptr_pull_enable">松开刷新</string>
    <string name="ptr_pull_disable">下拉刷新</string>
    <string name="ptr_push_refresh">上拉加载更多...</string>
    <string name="ptr_push_refreshing">正在加载...</string>
    <string name="ptr_push_enable">松开加载</string>
    <string name="ptr_push_disable">上拉加载</string>

    <!--share-->
    <string name="weixin">微信</string>
    <string name="weibo">微博</string>

    <!--push-->
    <string name="fake_message_title">消息有更新</string>
    <string name="fake_message_desc">你已发布的消息有更新，点击查看。</string>
    <string name="fake_message_payload">更新数据</string>
</resources>
