<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="53dp"
    android:background="@color/detail_bgc">

    <EditText
        style="@style/Login.EditText.Light"
        android:id="@+id/edtLoginMobile"
        android:drawableLeft="@drawable/ic_mobile"
        android:maxLength="11"
        android:hint="@string/login_common_mobile"
        android:layout_marginBottom="15dp"
        />

    <TextView
        android:visibility="gone"
        android:text="@string/login_mobile_hint"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

    <EditText
        style="@style/Login.EditText.Light"
        android:id="@+id/edtLoginPwd"
        android:drawableLeft="@drawable/ic_pwd"
        android:maxLength="8"
        android:hint="@string/login_common_pwd"
        android:inputType="textPassword"
        android:layout_marginBottom="8dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtRegister"
            android:textSize="15sp"
            android:textColor="@color/cb_text_gray_dark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:text="@string/login_common_register_next"/>

        <TextView
            android:id="@+id/txtForgetPwd"
            android:textSize="15sp"
            android:textColor="@color/cb_text_gray_dark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="@string/login_common_forget_next"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        style="@style/CBButton.Drak.Full"
        android:layout_marginTop="30dp"
        android:text="@string/login_common_login"
        />

</LinearLayout>


