<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/detail_bgc"
    android:paddingTop="53dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        style="@style/Login.EditText.Light"
        android:id="@+id/edtRegisterMobile"
        android:drawableLeft="@drawable/ic_mobile"
        android:maxLength="11"
        android:hint="@string/login_common_mobile"
        android:layout_marginBottom="15dp"
        />


    <EditText
        style="@style/Login.EditText.Light"
        android:id="@+id/edtRegisterUsername"
        android:drawableLeft="@drawable/ic_user"
        android:layout_marginBottom="15dp"
        android:maxLength="8"
        android:hint="@string/login_common_nickname"
        />

    <EditText
        style="@style/Login.EditText.Light"
        android:id="@+id/edtRegisterPwd"
        android:ems="10"
        android:drawableLeft="@drawable/ic_pwd"
        android:maxLength="8"
        android:hint="@string/login_common_pwd"
        android:inputType="textPassword"

        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        style="@style/CBButton.Drak.Full"
        android:layout_marginTop="30dp"
        android:text="@string/common_regist"
        />
</LinearLayout>
