<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">


    <fragment
        android:id="@+id/poi_map"
        class="com.amap.api.maps2d.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:background="@drawable/shape_lostlist_item_bg"
        >

        <AutoCompleteTextView
            android:id="@+id/poi_keyWord"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:completionThreshold="1"
            android:dropDownVerticalOffset="1.0dip"
            android:hint="@string/input_keyword"
            android:imeOptions="actionDone"
            android:inputType="text|textAutoComplete"
            android:paddingLeft="12dp"
            android:paddingRight="37.0dip"
            android:singleLine="true"
            android:textColor="#000000"
            android:textSize="16.0sp"/>

        <Button
            android:id="@+id/poi_searchButton"
            style="@style/CBButton.Drak"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:text="@string/search"/>
    </LinearLayout>

    <Button
        android:id="@+id/poi_confirm"
        style="@style/CBButton.Drak.Full"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/searchConfirm"
        android:visibility="gone"/>

</FrameLayout>